--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
-p {
-    color: aliceblue;
+.canvas {
+    border: 1px black dotted;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
+
+#canvas-draft {
+    background-color: transparent;
+}
+
+.container {
+    height: 600px;
 }
