--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .canvas {
     position: absolute;
-    top: 100px;
-    bottom: 0px;
-    left: auto;
-    right: auto;
-    background-size: cover;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 #canvas-draft {
@@ -12,27 +15,25 @@
 }
 
 .container {
+    width: 1280px;
     height: 600px;
     border: 1px black dotted;
-    width: 1280px;
-    margin-top: 100px;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
 }
-
 
 .container1 {
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
-.magnify-on{ 
+.magnify-on {
     transform: scale(1.1);
     transform: center center;
-} 
-  
-
+}
 
 #canvas-real2 {
     z-index: -1;
