--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     left: 0;
     right: 0;
     margin: auto;
+    margin-top: 5vw;
 }
 
 #canvas-draft {
@@ -19,20 +20,19 @@
 .container {
     width: 1280px;
     height: 800px;
-
     overflow: hidden;
     transform: translate3d(0, 0, 0);
 }
 
 .container1 {
-    height: 100px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .container2 {
-    height: 100px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,6 +51,7 @@
 
 input{
     vertical-align: middle;
+    margin: 15px
 }
 
 body {
@@ -59,8 +60,10 @@ body {
     background-position: 52% 55%;
 }
 
-input {
-    margin: 15px
+
+
+#imageLoader {
+    width: 15%
 
 }
 
